--- a/webroot/css/bdc.css
+++ b/webroot/css/bdc.css
@@ -7,3 +7,13 @@ main > .container {
 .nav-item {
     padding: 0px 10px;
 }
+
+@media (max-width:500px) {
+    .navbar {
+        flex-wrap: nowrap;
+    }
+    main > .container {
+        width: 100%;
+        padding: 60px 5px 5px;
+    }
+}
